// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CandidateResult > renders detailed snapshot with correctness flags 1`] = `
<div>
  <div>
    <div
      class="results-page"
    >
      <header
        class="results-page__header"
      >
        <h1>
          Test Results
        </h1>
        <p>
          Attempt 
          attempt-1
        </p>
      </header>
      <div
        class="results-form__actions"
      >
        <button
          class="btn btn--secondary btn--md"
          type="button"
        >
          Refresh
        </button>
      </div>
      <section
        aria-label="Result summary"
        class="results-panel"
      >
        <div
          class="results-page__header"
        >
          <h2
            class="results-panel__title"
          >
            Your Results
          </h2>
          <span
            class="results-status-badge results-status-badge--released"
          >
            Passed
          </span>
        </div>
        <div
          class="results-summary__totals"
        >
          <div
            class="results-summary__metric"
          >
            <strong>
              8.00
            </strong>
            <span>
              Total Awarded
            </span>
          </div>
          <div
            class="results-summary__metric"
          >
            <strong>
              10.00
            </strong>
            <span>
              Total Max
            </span>
          </div>
          <div
            class="results-summary__metric"
          >
            <strong>
              test-1
            </strong>
            <span>
              Test ID
            </span>
          </div>
        </div>
        <div
          class="results-table-wrapper"
        >
          <table
            class="results-table"
          >
            <thead>
              <tr>
                <th>
                  Topic
                </th>
                <th>
                  Awarded
                </th>
                <th>
                  Max
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  math
                </td>
                <td>
                  8.00
                </td>
                <td>
                  10.00
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </section>
      <section
        aria-label="Question correctness"
        class="results-panel"
      >
        <h2
          class="results-panel__title"
        >
          Question Breakdown
        </h2>
        <div
          class="results-table-wrapper"
        >
          <table
            class="results-table"
          >
            <thead>
              <tr>
                <th>
                  Question
                </th>
                <th>
                  Type
                </th>
                <th>
                  Awarded
                </th>
                <th>
                  Max
                </th>
                <th>
                  Correct
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  q-1
                </td>
                <td>
                  mcq
                </td>
                <td>
                  5.00
                </td>
                <td>
                  5.00
                </td>
                <td>
                  <span
                    class="results-correctness results-correctness--correct"
                  >
                    Correct
                  </span>
                </td>
              </tr>
              <tr>
                <td>
                  q-2
                </td>
                <td>
                  mcq
                </td>
                <td>
                  3.00
                </td>
                <td>
                  5.00
                </td>
                <td>
                  <span
                    class="results-correctness results-correctness--incorrect"
                  >
                    Incorrect
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`CandidateResult > renders summary-only snapshot 1`] = `
<div>
  <div>
    <div
      class="results-page"
    >
      <header
        class="results-page__header"
      >
        <h1>
          Test Results
        </h1>
        <p>
          Attempt 
          attempt-1
        </p>
      </header>
      <div
        class="results-form__actions"
      >
        <button
          class="btn btn--secondary btn--md"
          type="button"
        >
          Refresh
        </button>
      </div>
      <section
        aria-label="Result summary"
        class="results-panel"
      >
        <div
          class="results-page__header"
        >
          <h2
            class="results-panel__title"
          >
            Your Results
          </h2>
          <span
            class="results-status-badge results-status-badge--released"
          >
            Passed
          </span>
        </div>
        <div
          class="results-summary__totals"
        >
          <div
            class="results-summary__metric"
          >
            <strong>
              8.00
            </strong>
            <span>
              Total Awarded
            </span>
          </div>
          <div
            class="results-summary__metric"
          >
            <strong>
              10.00
            </strong>
            <span>
              Total Max
            </span>
          </div>
          <div
            class="results-summary__metric"
          >
            <strong>
              test-1
            </strong>
            <span>
              Test ID
            </span>
          </div>
        </div>
        <div
          class="results-table-wrapper"
        >
          <table
            class="results-table"
          >
            <thead>
              <tr>
                <th>
                  Topic
                </th>
                <th>
                  Awarded
                </th>
                <th>
                  Max
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  math
                </td>
                <td>
                  8.00
                </td>
                <td>
                  10.00
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`CandidateResult > renders withheld state snapshot 1`] = `
<div>
  <div>
    <div
      class="results-page"
    >
      <header
        class="results-page__header"
      >
        <h1>
          Test Results
        </h1>
        <p>
          Attempt 
          attempt-1
        </p>
      </header>
      <div
        class="results-form__actions"
      >
        <button
          class="btn btn--secondary btn--md"
          type="button"
        >
          Refresh
        </button>
      </div>
      <section
        class="results-panel"
      >
        <h2
          class="results-panel__title"
        >
          Results Not Yet Available
        </h2>
        <p
          class="results-empty-state"
        >
          Your results have not been released yet. Please check back later.
        </p>
      </section>
    </div>
  </div>
</div>
`;
